Working layout w/ correct scrollbar position.

--- a/modules/atlas/components/dashboard/_dashboard.scss
+++ b/modules/atlas/components/dashboard/_dashboard.scss
@@ -19,5 +19,5 @@ $dashboard-heading-height: 50px;
 }
 
 .dashboard__content__scrollable {
-  overflow-y: scroll;
+  overflow-y: auto;
 }
