--- a/modules/map/components/toggle-fullscreen/_toggle-fullscreen.scss
+++ b/modules/map/components/toggle-fullscreen/_toggle-fullscreen.scss
@@ -1,6 +1,6 @@
 .toggle-fullscreen {
   position: absolute;
-  top: 0;
+  top: $base-whitespace * 2;
   right: $base-whitespace;
   width: 26px;
   height: 26px;
