--- a/modules/shared/components/loading-indicator/_loading-indicator.scss
+++ b/modules/shared/components/loading-indicator/_loading-indicator.scss
@@ -1,6 +1,6 @@
 .c-loading-indicator--box {
   position: absolute;
-  top: 0;
+  top: $base-whitespace * 2;
   left: $base-whitespace;
   padding: $base-whitespace / 2;
   border: 1px solid $secondary-gray40;
