--- a/modules/straatbeeld/components/metadata/_metadata.scss
+++ b/modules/straatbeeld/components/metadata/_metadata.scss
@@ -1,6 +1,6 @@
 .straatbeeld-metadata {
   position: absolute;
-  right: $base-whitespace * 2;
+  right: $base-whitespace;
   bottom: 0;
   left: $base-whitespace;
   height: 40px;
